[gd_scene load_steps=8 format=3 uid="uid://blgolxaiwm52n"]

[ext_resource type="FontFile" uid="uid://drpfmf3jbf58w" path="res://UI/Fonts/TrueType (.ttf)/PixeloidSans-Bold.ttf" id="1_i8ji6"]
[ext_resource type="Theme" uid="uid://fb64r7sbqq14" path="res://UI/UIResources/Style/GameTheme.tres" id="1_ictad"]
[ext_resource type="Script" path="res://UI/Scripts/MainMenuUI.gd" id="2_g6k5l"]
[ext_resource type="Texture2D" uid="uid://1hrkh4golxww" path="res://UI/UIResources/AtlasCutoffs/RuFlagIcon.tres" id="2_gvno1"]
[ext_resource type="Texture2D" uid="uid://c888lpil38jmr" path="res://UI/UIResources/AtlasCutoffs/SoundOFFTexture.tres" id="3_0in30"]
[ext_resource type="Texture2D" uid="uid://c6187sa0cf3wg" path="res://Game/Sprites/bg.png" id="3_3oyhc"]
[ext_resource type="Texture2D" uid="uid://ln60073j7hxs" path="res://UI/UIResources/AtlasCutoffs/SoundTexture.tres" id="4_bwsqv"]

[node name="MainMenuUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ictad")
script = ExtResource("2_g6k5l")
playScenePath = "res://Game/Scenes/Level.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.450648, 0.450648, 0.450648, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3oyhc")
expand_mode = 2
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_right = -255.0
offset_bottom = -492.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -335

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_i8ji6")
theme_override_font_sizes/font_size = 128
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "SUBTITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuMargin" type="MarginContainer" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 514.0
offset_top = 530.0
offset_right = -534.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 64

[node name="MenuLayoutContainer" type="VBoxContainer" parent="MenuMargin"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 12

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MenuMargin/MenuLayoutContainer"]
layout_mode = 2
size_flags_vertical = 3
ratio = 4.5664

[node name="PlayButton" type="Button" parent="MenuMargin/MenuLayoutContainer/AspectRatioContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
text = "PLAY"
clip_text = true

[node name="SettingsContainer" type="HBoxContainer" parent="MenuMargin/MenuLayoutContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="LanguageButton" type="Button" parent="MenuMargin/MenuLayoutContainer/SettingsContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 26
icon = ExtResource("2_gvno1")
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="SoundContainer" type="HBoxContainer" parent="MenuMargin/MenuLayoutContainer/SettingsContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="MuteButton" type="TextureButton" parent="MenuMargin/MenuLayoutContainer/SettingsContainer/SoundContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_0in30")
texture_pressed = ExtResource("4_bwsqv")

[node name="Volume" type="HSlider" parent="MenuMargin/MenuLayoutContainer/SettingsContainer/SoundContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.05
value = 1.0
